checkout button alerts what is in the cart and asks for confirmation.

--- a/membership.html
+++ b/membership.html
@@ -39,7 +39,7 @@
 				<input type="button" class="freq" name="everytwo" value="Every 2 Months" />
 				<input type="button" class="freq" name="everythree" value="Every 3 Months" />
 				<input type="button" name="previous" class="previous action-button" value="Previous" />
-				<input type="submit" name="submit" class="submit action-button" value="Checkout" />
+				<input type="submit" name="checkout" class="checkout action-button" value="Checkout" />
 			</fieldset>
 		</form>
 
