added pricing on choices and a total for checkout.

--- a/membership.html
+++ b/membership.html
@@ -23,21 +23,21 @@
 			<!-- fieldsets -->
 			<fieldset>
 				<h2 class="fs-title">How Many Bottles 'Ya Want</h2>
-				<input type="button" class="bottles" name="3-pack" value="3 Pack" />
-				<input type="button" class="bottles" name="6-pack" value="6 Pack" />
+				<input type="button" class="bottles" data-price="45.00" data-bottles="3" value="3 Pack ($45.00)" />
+				<input type="button" class="bottles" data-price="75.00" data-bottles="6" value="6 Pack ($75.00)" />
 			</fieldset>
 			<fieldset>
 				<h2 class="fs-title">What Kind of Wine 'Ya Like</h2>
-				<input type="button" class="type" name="red" value="All Red" />
-				<input type="button" class="type" name="white" value="All White" />
-				<input type="button" class="type" name="variety" value="Variety (Reds and Whites)" />
+				<input type="button" class="type" value="All Red" />
+				<input type="button" class="type" value="All White" />
+				<input type="button" class="type" value="Variety (Reds and Whites)" />
 				<input type="button" name="previous" class="previous action-button" value="Previous" />
 			</fieldset>
 			<fieldset>
 				<h2 class="fs-title">How Often 'Ya Booze</h2>
-				<input type="button" class="freq" name="everymonth" value="Every Month" />
-				<input type="button" class="freq" name="everytwo" value="Every 2 Months" />
-				<input type="button" class="freq" name="everythree" value="Every 3 Months" />
+				<input type="button" class="freq" value="Every Month" />
+				<input type="button" class="freq" value="Every 2 Months" />
+				<input type="button" class="freq" value="Every 3 Months" />
 				<input type="button" name="previous" class="previous action-button" value="Previous" />
 				<input type="submit" name="checkout" class="checkout action-button" value="Checkout" />
 			</fieldset>
